include/Win32/Physics.NGDImport.hpp

struct NewtonJointRecord;
struct NewtonHingeSliderUpdateDesc;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonJoint;
typedef void * PNewtonMaterial;
typedef NewtonJointRecord *PNewtonJointRecord;
struct DECLSPEC_DRECORD NewtonJointRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_0;
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_1;
	System::StaticArray<float, 3> m_minLinearDof;
	System::StaticArray<float, 3> m_maxLinearDof;
	System::StaticArray<float, 3> m_minAngularDof;
	System::StaticArray<float, 3> m_maxAngularDof;
	void *m_attachBody_0;
	void *m_attachBody_1;
	System::StaticArray<float, 16> m_extraParameters;
	int m_bodiesCollisionOn;
	System::StaticArray<float, 32> m_descriptionType;
};
typedef NewtonHingeSliderUpdateDesc *PNewtonHingeSliderUpdateDesc;
struct DECLSPEC_DRECORD NewtonHingeSliderUpdateDesc
{
public:
	float m_accel;
	float m_minFriction;
	float m_maxFriction;
	float m_timestep;
};
typedef int __cdecl (*NewtonGetBuoyancyPlane)(const int collisionID, void * context, const PdFloat globalSpaceMatrix, PdFloat globalSpacePlane);
typedef void __cdecl (*NewtonBallCallBack)(const void * ball, float timestep);
typedef unsigned __cdecl (*NewtonHingeCallBack)(const void * hinge, PNewtonHingeSliderUpdateDesc desc);
typedef void __cdecl (*NewtonConstraintDestructor)(const void * me);
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" int __cdecl NewtonBodyGetContinuousCollisionMode(const void * Body);
extern "C" int __cdecl NewtonBodyGetJointRecursiveCollision(const void * Body);
extern "C" void __cdecl NewtonBodyGetMatrix(const void * Body, PdFloat matrix);
extern "C" void __cdecl NewtonBodyGetRotation(const void * Body, PdFloat rotation);
extern "C" void __cdecl NewtonBodyGetMassMatrix(const void * Body, PdFloat mass, PdFloat Ixx, PdFloat Iyy, PdFloat Izz);
extern "C" void __cdecl NewtonBodyGetInvMass(const void * Body, PdFloat invMass, PdFloat invIxx, PdFloat invIyy, PdFloat invIzz);
extern "C" void __cdecl NewtonBodyGetOmega(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetVelocity(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetForce(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetTorque(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetForceAcc(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetTorqueAcc(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetCentreOfMass(const void * Body, PdFloat com);
extern "C" float __cdecl NewtonBodyGetLinearDamping(const void * Body);
extern "C" void __cdecl NewtonBodyGetAngularDamping(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetAABB(const void * Body, PdFloat p0, PdFloat p1);
extern "C" void __cdecl NewtonBodyGetFreezeTreshold(const void * Body, PdFloat freezeSpeed2, PdFloat freezeOmega2);
extern "C" void * __cdecl NewtonBodyGetFirstJoint(const void * Body);
extern "C" void * __cdecl NewtonBodyGetNextJoint(const void * Body, const void * joint);
extern "C" void * __cdecl NewtonBodyGetFirstContactJoint(const void * Body);
extern "C" void * __cdecl NewtonBodyGetNextContactJoint(const void * Body, const void * contactJoint);
extern "C" void * __cdecl NewtonContactJointGetFirstContact(const void * contactJoint);
extern "C" void * __cdecl NewtonContactJointGetNextContact(const void * contactJoint, void * contact);
extern "C" int __cdecl NewtonContactJointGetContactCount(const void * contactJoint);
extern "C" void __cdecl NewtonContactJointRemoveContact(const void * contactJoint, void * contact);
extern "C" void * __cdecl NewtonContactGetMaterial(const void * contact);
extern "C" void __cdecl NewtonBodyAddBuoyancyForce(const void * Body, float fluidDensity, float fluidLinearViscosity, float fluidAngularViscosity, const PdFloat gravityVector, NewtonGetBuoyancyPlane buoyancyPlane, void * context);
extern "C" void __cdecl NewtonBodyAddImpulse(const void * Body, const PdFloat pointDeltaVeloc, const PdFloat pointPosit);
extern "C" void __cdecl NewtonBodyApplyImpulseArray(const void * Body, int ImpuleCount, int StrideInByte, const PdFloat impulseArray, const PdFloat pointArray);
extern "C" void * __cdecl NewtonJointGetUserData(const void * joint);
extern "C" void __cdecl NewtonJointSetUserData(const void * joint, void * userData);
extern "C" void * __cdecl NewtonJointGetBody0(const void * joint);
extern "C" void * __cdecl NewtonJointGetBody1(const void * joint);
extern "C" void __cdecl NewtonJointGetInfo(const void * joint, PNewtonJointRecord info);
extern "C" int __cdecl NewtonJointGetCollisionState(const void * joint);
extern "C" void __cdecl NewtonJointSetCollisionState(const void * joint, int state);
extern "C" float __cdecl NewtonJointGetStiffness(const void * joint);
extern "C" void __cdecl NewtonJointSetStiffness(const void * joint, float state);
extern "C" void __cdecl NewtonDestroyJoint(const void * NewtonWorld, const void * joint);
extern "C" void __cdecl NewtonJointSetDestructor(const void * joint, NewtonConstraintDestructor _destructor);
extern "C" void * __cdecl NewtonConstraintCreateBall(const void * NewtonWorld, const PdFloat pivotPoint, const void * childBody, const void * parentBody);
extern "C" void __cdecl NewtonBallSetUserCallback(const void * ball, NewtonBallCallBack callback);
extern "C" void __cdecl NewtonBallGetJointAngle(const void * ball, PdFloat angle);
extern "C" void __cdecl NewtonBallGetJointOmega(const void * ball, PdFloat omega);
extern "C" void __cdecl NewtonBallGetJointForce(const void * ball, PdFloat Force);
extern "C" void __cdecl NewtonBallSetConeLimits(const void * ball, const PdFloat pin, float maxConeAngle, float maxTwistAngle);
extern "C" void * __cdecl NewtonConstraintCreateHinge(const void * NewtonWorld, const PdFloat pivotPoint, const PdFloat pinDir, const void * childBody, const void * parentBody);
extern "C" void __cdecl NewtonHingeSetUserCallback(const void * hinge, NewtonHingeCallBack callback);
extern "C" float __cdecl NewtonHingeGetJointAngle(const void * hinge);
extern "C" float __cdecl NewtonHingeGetJointOmega(const void * hinge);
extern "C" void __cdecl NewtonHingeGetJointForce(const void * hinge, PdFloat Force);
extern "C" float __cdecl NewtonHingeCalculateStopAlpha(const void * hinge, const PNewtonHingeSliderUpdateDesc desc, float angle);